Thêm chức năng thanh toán mã QR payment-service
